# escam_notifications

./: Cargo.toml  build.sh  build_win.sh  run.sh
backend/: Cargo.toml  build.rs  config.json
backend/src/: config.rs  main.rs
backend/src/job_controller/: state.rs
backend/src/services/: mod.rs
backend/src/services/data_sources/csv/: get_status.rs  mod.rs  upload.rs  verify.rs
backend/src/services/merge/: mod.rs  start.rs
backend/src/services/templates/: get.rs  mod.rs  pdf.rs  save.rs
common/src/: lib.rs
common/src/jobs/: mod.rs
common/src/model/: csv.rs  datasource.rs  image.rs  merge.rs  mod.rs  place_holder.rs  pleaceholder.rs  template.rs  variable.rs
common/src/requests/: mod.rs
frontend/: Cargo.toml  index.html
frontend/src/: app.rs  main.rs  workspace_grid.rs
frontend/src/components/: mod.rs
frontend/src/components/data_sources/csv/: mod.rs
frontend/src/components/statics/text/: helpers.rs  messages.rs  mod.rs  props.rs  state.rs  static_text_component.rs  styles.rs  update.rs  view.rs
frontend/src/components/statics/text/dialogs/: mod.rs
frontend/src/components/statics/text/dialogs/image/: mod.rs
frontend/src/components/statics/text/dialogs/pdf/: mod.rs
frontend/src/components/statics/text/dialogs/variables/: messages.rs  mod.rs  properties.rs  state.rs  variable_creator_component.rs
frontend/src/tops_sheet/: mod.rs  yw_material_top_sheet.rs
frontend/styles/: general.css  ywmaterialtopsheet.css
