[package]
name = "backend"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
common = { path = "../common" }
actix-web = "4.11.0"
include_dir = "0.7.4"
mime_guess = "2.0.5"
webbrowser = "1.0.5"
env_logger = "0.11.8"
log = "0.4.28"
rusqlite = { version = "0.37.0", features = ["bundled"] }
[build-dependencies]
fs_extra = "1.3.0"

