[package]
name = "backend"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
common = { path = "../common" }
actix-web = "4.11.0"
actix-multipart = "0.7.2"
include_dir = "0.7.4"
mime_guess = "2.0.5"
webbrowser = "1.0.5"
env_logger = "0.11.8"
log = "0.4.28"
rusqlite = { version = "0.37.0", features = ["bundled"] }
tokio = "1.47.1"
uuid = { version = "1.18.1", features = ["v4"] }
rayon = "1.11.0"
futures-util = "0.3.31"
serde_json = "1.0.145"
md5 = "0.8.0"
base64 = "0.22.1"
genpdf = { version = "0.2", features = ["images"] }
tempfile = "3.23.0"

[build-dependencies]
fs_extra = "1.3.0"

