[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
web-sys = "0.3.80"
gloo-net = "0.6.0"
wasm-bindgen-futures = "0.4.53"
serde = "1.0.226"
num-format = "0.4.4"
uuid = { version = "1.18.1", features = ["v4", "js", "serde"] }
serde_json = "1.0.145"
js-sys = "0.3.81"
pulldown-cmark = "0.13.0"


[build-dependencies]

