[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
yew = { version = "0.21", features = ["csr"] }
web-sys = { version = "0.3.82", features = ["Event", "XmlHttpRequest", "Window", "Document", "Element", "HtmlElement", "Node", "EventTarget", "KeyboardEvent", "MouseEvent", "HtmlInputElement", "HtmlTextAreaElement", "CssStyleDeclaration", "Blob", "Url"] }
gloo-net = "0.6.0"
gloo-console = "0.3.0"
wasm-bindgen-futures = "0.4.53"
serde = "1.0.226"
num-format = "0.4.4"
uuid = { version = "1.18.1", features = ["v4", "js", "serde"] }
serde_json = "1.0.145"
js-sys = "0.3.81"
pulldown-cmark = "0.13.0"
wasm-bindgen = "0.2.105"
gloo-timers = { version = "0.3.0", features = ["futures"] }
gloo-file = { version = "0.3.0", features = ["futures"] }
regex = "1.12.2"
base64 = "0.22.1"
md5 = "0.8.0"

[build-dependencies]

